--- a/vignettes/Data_visualisation.Rmd
+++ b/vignettes/Data_visualisation.Rmd
@@ -2,7 +2,7 @@
 title: "Visualise spatiotemporal spread data"
 author: "Ihsan Khaliq"
 date: "`r Sys.Date()`"
-output:html_vignette
+output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Visualise spatiotemporal spread data}
   %\VignetteEngine{knitr::rmarkdown}
