Load more libraries, as   `arrange(desc(value))` function wasn't working

--- a/vignettes/Temporal_GAMs.Rmd
+++ b/vignettes/Temporal_GAMs.Rmd
@@ -27,7 +27,10 @@ knitr::opts_chunk$set(
 library("readxl")
 library("mgcv")
 library("broom")
+library("ggpubr")
+library("tidyverse")
 library("mgcViz")
+library("lubridate")
 ```
 
 ## Import data
