--- a/vignettes/Temporal_GAMs.Rmd
+++ b/vignettes/Temporal_GAMs.Rmd
@@ -354,7 +354,7 @@ plot(model_11, scheme = 1, pages = 1)
 
 ### Comments on model_11
 
-The effect of `avg_wind_speed` is not significant at its own, but significant in interaction with `total_rain`.
+The effect of `avg_wind_speed` is not significant at its own, but significant in interaction with `total_rain` for Tosari only
 
 ### Visualize the interaction between avg_wind_speed and total_rain
 
