--- a/vignettes/Temporal_GAMs.Rmd
+++ b/vignettes/Temporal_GAMs.Rmd
@@ -248,7 +248,7 @@ model_8 <-
       s(avg_wind_speed, k = 18) +
       s(avg_rh, k = 18) +
       s(avg_temp, k = 18) +
-      location + assessment_number,
+      location + assessment_number + direction,
     data = dat,
     method = "REML"
   )
