--- a/vignettes/Temporal_GAMs.Rmd
+++ b/vignettes/Temporal_GAMs.Rmd
@@ -278,7 +278,7 @@ model_9 <-
       s(avg_temp, k = 18, by = location) +
       s(avg_rh, k = 18, by = location) +
       assessment_number +
-      location,
+      location + direction,
     data = dat,
     method = "REML"
   )
